--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,62 @@
-# [Android] ========================
+
+# Created by https://www.gitignore.io/api/macos,windows,android,java
+
+### macOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+
+### Android ###
 # Built application files
 *.apk
 *.ap_
 
-# Files for the Dalvik VM
+# Files for the ART/Dalvik VM
 *.dex
 
 # Java class files
@@ -12,6 +65,7 @@
 # Generated files
 bin/
 gen/
+out/
 
 # Gradle files
 .gradle/
@@ -26,46 +80,29 @@ proguard/
 # Log Files
 *.log
 
+# Android Studio Navigation editor temp files
+.navigation/
 
-## Directory-based project format:
-.idea/
+# Android Studio captures folder
+captures/
 
-## File-based project format:
-*.ipr
-*.iws
+# Intellij
+*.iml
+.idea/workspace.xml
+.idea/libraries
 
-## Plugin-specific files:
+# Keystore files
+*.jks
 
-# IntelliJ
-out/
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
+### Android Patch ###
+gen-external-apklibs
 
 
-# [Maven] ========================
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-
-
-# [Gradle-Android] ========================
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Gradle Signing
-signing.properties
-trestle.keystore
+### Java ###
+*.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -77,10 +114,3 @@ trestle.keystore
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-# Misc
-/.idea/workspace.xml
-.DS_Store
-/captures
-**/*.iml
-*.class
