--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -6,6 +6,8 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+
+    google()
 }
 
 android {
@@ -30,9 +32,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:design:26.0.2'
 
-    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     compile project(':fabtransitionactivity')
 }
