--- a/fabtransitionactivity/build.gradle
+++ b/fabtransitionactivity/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply from: 'maven-push.gradle'
 
 repositories {
     mavenCentral()
@@ -7,11 +6,13 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+
+    google()
 }
 
 android {
     compileSdkVersion COMPILE_SDK_VERSION as int
-    buildToolsVersion BUILD_TOOLS_VERSION
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         minSdkVersion MIN_SDK_VERSION
@@ -28,8 +29,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
-        transitive = true;
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile ('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
+        transitive = true
     }
 }
