--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,10 @@
 buildscript {
     repositories {
         jcenter()
-        google()
+        
+        maven {
+            url 'https://maven.google.com'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-beta5'
