--- a/fabtransitionactivity/build.gradle
+++ b/fabtransitionactivity/build.gradle
@@ -7,7 +7,9 @@ repositories {
         url "https://jitpack.io"
     }
 
-    google()
+    maven {
+        url 'https://maven.google.com'
+    }
 }
 
 android {
