--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ VERSION_CODE=3
 COMPILE_SDK_VERSION=26
 TARGET_SDK_VERSION=26
 MIN_SDK_VERSION=19
-BUILD_TOOLS_VERSION=26.0.1
+BUILD_TOOLS_VERSION=26.0.
 GROUP=com.github.coyarzun89
 
 POM_DESCRIPTION=A library that make a circle reveal animation and open a new activity
